--- a/public/500.html
+++ b/public/500.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>The page you were looking for doesn't exist (500)</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <style>
 
     .pottery {
